--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<span class="bar"></span>
 		<span class="bar"></span>
 	</a>
-	<a id="home"><span class='fa fa-home'></span></a>
+	<!-- <a id="home"><span class='fa fa-home'></span></a> -->
 </menu>
 <header>&nbsp;&nbsp;&nbsp;&nbsp;Her Highness<br>SHEIKHA MOZA<br>BINT NASSER</header>
 <article>Chairperson of Qatar Foundation<br>Vice Chair of the Supreme<br>Council of Education</article>
