--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		<tr><td><a>GALLERY</a></td></tr>
 		<tr><td><a>SPEECHES</a></td></tr>
 		<tr><td><a>CONTACT</a></td></tr>
+		<tr><td><a></a></td></tr>
+		<tr><td><span class='fa fa-search'><input></td></tr>
 	</table>
 	<div id="end"></div>
 </div>
