--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<tr><td><a>SPEECHES</a></td></tr>
 		<tr><td><a>CONTACT</a></td></tr>
 		<tr><td><a></a></td></tr>
-		<tr><td><span class='fa fa-search'><input></td></tr>
+		<tr><td><span class='fa fa-search'></span><input></td></tr>
 	</table>
 	<div id="end"></div>
 </div>
