--- a/edu.html
+++ b/edu.html
@@ -53,14 +53,14 @@
 			<br>Education above all launches multi-sector education project in Kenyan refugee camp.
 		</article>
 		<article>
-			<strong>Global needs of out-of-school children<span class='fa fa-angle-right'></span></strong>
-			<br><span>April 29, 2014</span>
-			<br>I hope to see coherence being built between different sectors, business, education, finance, health, sanitation and security.
+			<a href="articles/a1.html"><strong>Fundamental rights to Education <span class='fa fa-angle-right'></span></strong></a>
+			<br><span>April 30, 2014</span>
+			<br>HH Sheikha Moza meets education ministers to accelerate access to quality primary education.
 		</article>
 		<article>
-			<strong>Fundamental rights to Education <span class='fa fa-angle-right'></span></strong>
-			<br><span>April 21, 2014</span>
-			<br>HH Sheikha Moza meets education ministers to accelerate access to quality primary education.
+			<strong>Global needs of children<span class='fa fa-angle-right'></span></strong>
+			<br><span>April 29, 2014</span>
+			<br>I hope to see coherence being built between different sectors, business, education, finance, health, sanitation and security.
 		</article>
 
 	</div>
