--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<tr><td class="inner"><a>FAMILY</a></td></tr>
 			<tr><td class="inner"><a></a></td></tr>
 			<tr><td class="inner"><span class='fa fa-search'></span><input></td></tr>
-			<tr><td class="inner"><a></a></td></tr>
+			<tr><td class="inner" style="height:100px;"><a>&nbsp;</a></td></tr>
 
 			<tr><td class="upper"><a>ROLES</a></td></tr>
 			<tr><td class="upper"><a>GALLERY</a></td></tr>
@@ -38,7 +38,7 @@
 			<tr><td class="upper"><a>CONTACT</a></td></tr>
 			<tr><td class="upper"><a></a></td></tr>
 			<tr><td class="upper"><span class='fa fa-search'></span><input></td></tr>
-			<tr><td class="upper"><a></a></td></tr>
+			<tr><td class="upper"><a>&nbsp;</a></td></tr>
 		</table>
 	</div>
 	<div class="home-page">
