--- a/edu.html
+++ b/edu.html
@@ -53,7 +53,7 @@
 			<br>Education above all launches multi-sector education project in Kenyan refugee camp.
 		</article>
 		<article>
-			<a href="articles/a1.html"><strong>Fundamental rights to Education <span class='fa fa-angle-right'></span></strong></a>
+			<strong><a href="articles/a1.html">Fundamental rights to Education <span class='fa fa-angle-right'></span></a></strong>
 			<br><span>April 30, 2014</span>
 			<br>HH Sheikha Moza meets education ministers to accelerate access to quality primary education.
 		</article>
