--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			<div class="lang"><a>AR</a></div>
 			<div class="lang"><a>EN</a></div>
 		</footer>
+		<div id="bottom"></div>
 	</div>
 	<script type="text/javascript">
 		$('#bars, .fa-angle-left').click(function(){
