--- a/edu.html
+++ b/edu.html
@@ -53,16 +53,35 @@
 			<br>Education above all launches multi-sector education project in Kenyan refugee camp.
 		</article>
 		<article>
-			<strong><a href="articles/a1.html">Fundamental rights to Education <span class='fa fa-angle-right'></span></a></strong>
+			<strong><a href="articles/a1.html">Fundamental Rights to Education <span class='fa fa-angle-right'></span></a></strong>
 			<br><span>April 30, 2014</span>
 			<br>HH Sheikha Moza meets education ministers to accelerate access to quality primary education.
 		</article>
 		<article>
-			<strong>Global needs of children<span class='fa fa-angle-right'></span></strong>
-			<br><span>April 29, 2014</span>
+			<strong>Global Needs of children<span class='fa fa-angle-right'></span></strong>
+			<br><span>March 14, 2014</span>
 			<br>I hope to see coherence being built between different sectors, business, education, finance, health, sanitation and security.
 		</article>
-
+		<article>
+			<strong>Teach for Qatar<span class='fa fa-angle-right'></span></strong>
+			<br><span>March 5, 2014</span>
+			<br>HH Sheikha Moza launched Teach For Qatar, a non-governmental organization that seeks to reinvest Qatar’s brightest graduates into the public education system.
+		</article>
+		<article>
+			<strong>World Innovation Summit<span class='fa fa-angle-right'></span></strong>
+			<br><span>February 7, 2014</span>
+			<br>HH Sheikha Moza attends closing session of world innovation summit for education "WISE" 2014.
+		</article>
+		<article>
+			<strong>Clinton Global Initiative<span class='fa fa-angle-right'></span></strong>
+			<br><span>January 18, 2014</span>
+			<br>HH Sheikha Moza urges political leaders to complete primary education goal, attends Clinton Global Initiative plenary.
+		</article>
+		<article>
+			<strong>Education Above All<span class='fa fa-angle-right'></span></strong>
+			<br><span>October 30, 2013</span>
+			<br>Her Highness Sheikha Moza bint Nasser Calls for collaboration and new funding to accelerate access to education.
+		</article>
 	</div>
 	<script type="text/javascript">
 		$('#bars, .fa-angle-left').click(function(){
@@ -73,7 +92,7 @@
 			$('.upper').fadeIn();
 			$('#news').removeClass("selected");
 		})
-		$('#home').click(function(){
+		$('a .fa-home').click(function(){
 			$('.mobile-navigation').fadeOut();
 			$('#news').removeClass("selected");
 			$('table .fa-angle-left').hide();
