--- a/edu.html
+++ b/edu.html
@@ -35,13 +35,13 @@
 			<tr><td class="upper"><a>ROLES</a></td></tr>
 			<tr><td class="upper"><a>GALLERY</a></td></tr>
 			<tr><td class="upper"><a>SPEECHES</a></td></tr>
-			<tr><td class="upper"><a>CONTACT</a></td></tr>
+			<tr><td class="upper"><a id="contact">CONTACT</a></td></tr>
 			<tr><td class="upper"><a></a></td></tr>
 			<tr><td class="upper"><span class='fa fa-search'></span><input></td></tr>
 			<tr><td class="upper"><a>&nbsp;</a></td></tr>
 		</table>
 	</div>
-	<div class="home-page">
+	<div class="page home-page">
 		<menu>
 			<a id="home" href="index.html"><span class='fa fa-home'></span></a>
 			<a id="bars"><span class='fa fa-bars'></span></a>
@@ -83,9 +83,16 @@
 			<br>Her Highness Sheikha Moza bint Nasser Calls for collaboration and new funding to accelerate access to education.
 		</article>
 	</div>
+	<div class="page contact-page">
+		<menu>
+			<a id="home" href="index.html"><span class='fa fa-home'></span></a>
+			<a id="bars"><span class='fa fa-bars'></span></a>
+		</menu>
+		<section><span class='fa fa-angle-left'></span>&nbsp;CONTACT</section>
+	</div>
 	<script type="text/javascript">
 		$('#bars, .fa-angle-left').click(function(){
-			$('.home-page').hide();
+			$('.page').hide();
 			$('.inner').hide();
 			$('table .fa-angle-left').hide();
 			$('.mobile-navigation').fadeIn();
@@ -97,6 +104,10 @@
 			$('table .fa-angle-left').fadeIn();
 			$('.upper').fadeOut();
 			$('.inner').delay(1200).fadeIn();
+		})
+		$('#contact').click(function(){
+			$('.mobile-navigation').fadeOut();
+			$('.contact-page').delay(1200).fadeIn();
 		})
 	</script>
 </body>
