--- a/edu.html
+++ b/edu.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="mobile-navigation">
 		<menu>
-			<a id="home"><span class='fa fa-home'></span></a>
+			<a id="home" href="index.html"><span class='fa fa-home'></span></a>
 		</menu>
 		<table>
 			<tr><td><a><span class='fa fa-angle-left'></span><sub id="news">NEWS</sub></a></td></tr>
@@ -89,25 +89,43 @@
 			<a id="bars"><span class='fa fa-bars'></span></a>
 		</menu>
 		<section><span class='fa fa-angle-left'></span>&nbsp;CONTACT</section>
+		<article>
+			<strong>Media Enquiries</strong><br>
+			<br><span>Jane Smith</span>
+			<br>Media Officer
+			<br>jane.smith@mozabintnasser.qa
+			<br><div id="phone">+974 3387 2457</div>
+		</article>
+		<article>
+			<strong>Other Enquiries</strong><br>
+			<br><span>James Bond</span>
+			<br>Media Officer
+			<br>james.bond@mozabintnasser.qa
+			<br><div id="phone">+974 3387 2457</div>
+			<br><span>Sarah Heart</span>
+			<br>Media Officer
+			<br>sarah.heart@mozabintnasser.qa
+			<br><div id="phone">+974 3387 2457</div>
+		</article>
 	</div>
 	<script type="text/javascript">
 		$('#bars, .fa-angle-left').click(function(){
+			$('table .fa-angle-left').hide();
 			$('.page').hide();
 			$('.inner').hide();
-			$('table .fa-angle-left').hide();
+			$('#news').removeClass("selected");
 			$('.mobile-navigation').fadeIn();
 			$('.upper').fadeIn();
-			$('#news').removeClass("selected");
 		})
 		$('#news').click(function(){
 			$('#news').addClass("selected");
 			$('table .fa-angle-left').fadeIn();
 			$('.upper').fadeOut();
-			$('.inner').delay(1200).fadeIn();
+			$('.inner').delay(1000).fadeIn();
 		})
 		$('#contact').click(function(){
 			$('.mobile-navigation').fadeOut();
-			$('.contact-page').delay(1200).fadeIn();
+			$('.contact-page').delay(1000).fadeIn();
 		})
 	</script>
 </body>
