--- a/home.html
+++ b/home.html
@@ -17,13 +17,13 @@
 <body>
 	<div class="mobile-navigation">
 		<menu>
-			<a id="home" href="home"><span class='fa fa-home'></span></a>
+			<a id="home"><span class='fa fa-home'></span></a>
 		</menu>
 		<table>
 			<tr><td><a><span class='fa fa-angle-left'></span><sub id="news">NEWS</sub></a></td></tr>
 
 			<tr><td class="inner"><a></a></td></tr>
-			<tr><td class="inner"><a href="edu.html">EDUCATION</a></td></tr>
+			<tr><td class="inner"><a href="edu">EDUCATION</a></td></tr>
 			<tr><td class="inner"><a>HEALTHCARE</a></td></tr>
 			<tr><td class="inner"><a>ENVIRONMENT</a></td></tr>
 			<tr><td class="inner"><a>PUBLIC RELATIONS</a></td></tr>
@@ -33,7 +33,7 @@
 			<tr><td class="inner" style="height:100px;"><a>&nbsp;</a></td></tr>
 
 			<tr><td class="upper"><a>ROLES</a></td></tr>
-			<tr><td class="upper"><a>GALLERY</a></td></tr>
+			<tr><td class="upper"><a id="gallery">GALLERY</a></td></tr>
 			<tr><td class="upper"><a>SPEECHES</a></td></tr>
 			<tr><td class="upper"><a id="contact">CONTACT</a></td></tr>
 			<tr><td class="upper"><a></a></td></tr>
@@ -43,49 +43,21 @@
 	</div>
 	<div class="page home-page">
 		<menu>
-			<a id="home" href="home"><span class='fa fa-home'></span></a>
 			<a id="bars"><span class='fa fa-bars'></span></a>
 		</menu>
-		<section><span class='fa fa-angle-left'></span>&nbsp;EDUCATION</section>
-		<article>
-			<strong>Education in Kenya<span class='fa fa-angle-right'></span></strong>
-			<br><span>November 5, 2014</span>
-			<br>Education above all launches multi-sector education project in Kenyan refugee camp.
-		</article>
-		<article>
-			<strong><a href="articles/a1">Rights to Education <span class='fa fa-angle-right'></span></a></strong>
-			<br><span>April 30, 2014</span>
-			<br>HH Sheikha Moza meets education ministers to accelerate access to quality primary education.
-		</article>
-		<article>
-			<strong>Global Needs of children<span class='fa fa-angle-right'></span></strong>
-			<br><span>March 14, 2014</span>
-			<br>I hope to see coherence being built between different sectors, business, education, finance, health, sanitation and security.
-		</article>
-		<article>
-			<strong>Teach for Qatar<span class='fa fa-angle-right'></span></strong>
-			<br><span>March 5, 2014</span>
-			<br>HH Sheikha Moza launched Teach For Qatar, a non-governmental organization that seeks to reinvest Qatar’s brightest graduates into the public education system.
-		</article>
-		<article>
-			<strong>World Innovation Summit<span class='fa fa-angle-right'></span></strong>
-			<br><span>February 7, 2014</span>
-			<br>HH Sheikha Moza attends closing session of world innovation summit for education "WISE" 2014.
-		</article>
-		<article>
-			<strong>Clinton Global Initiative<span class='fa fa-angle-right'></span></strong>
-			<br><span>January 18, 2014</span>
-			<br>HH Sheikha Moza urges political leaders to complete primary education goal, attends Clinton Global Initiative plenary.
-		</article>
-		<article>
-			<strong>Education Above All<span class='fa fa-angle-right'></span></strong>
-			<br><span>October 30, 2013</span>
-			<br>Her Highness Sheikha Moza bint Nasser Calls for collaboration and new funding to accelerate access to education.
-		</article>
+		<header>&nbsp;&nbsp;&nbsp;&nbsp;Her Highness<br>SHEIKHA MOZA<br>BINT NASSER</header>
+		<h3>Chairperson of Qatar Foundation<br>Vice Chair of the Supreme<br>Council of Education</h3>
+		<img src="img/home.jpg">
+		<h3>“Education is a fundamental right<br>A right that no one should be deprived of.”</h3>
+		<footer>
+			<div class="lang"><a>AR</a></div>
+			<div class="lang"><a>EN</a></div>
+		</footer>
+		<div id="bottom"></div>
 	</div>
 	<div class="page contact-page">
 		<menu>
-			<a id="home" href="home"><span class='fa fa-home'></span></a>
+			<a id="home"><span class='fa fa-home'></span></a>
 			<a id="bars"><span class='fa fa-bars'></span></a>
 		</menu>
 		<section><span class='fa fa-angle-left'></span>&nbsp;CONTACT</section>
@@ -108,24 +80,71 @@
 			<br><div id="phone">+974 3387 2457</div>
 		</article>
 	</div>
+	<div class="page gallery-page">
+		<menu>
+			<a id="home"><span class='fa fa-home'></span></a>
+			<a id="bars"><span class='fa fa-bars'></span></a>
+		</menu>
+		<section><span class='fa fa-angle-left'></span>&nbsp;GALLERY</section>
+		<article>
+			<strong>Education Above All</strong><br>
+			<span>November, 2014</span><br>
+			<br>Global initiative protecting the right of children and youth to quality education.<br>
+			<img src="img/img2.jpg">
+			<div id="share">SHARE</div>
+		</article>
+		<article>
+			<strong>The Qatari-Japanese Friendship</strong><br>
+			<span>March, 2014</span><br>
+			<br>Our partnership can be symbolised by the Qatari-Japanese Friendship Fund.<br>
+			<img src="img/img3.jpg">
+			<div id="share">SHARE</div>
+		</article>
+		<article>
+			<strong>Universal Primary Education</strong><br>
+			<span>March, 2014</span><br>
+			<br>HH wants to galvanise the international community to provide education for 58 million children around the world without access to school.<br>
+			<img src="img/img4.jpg">
+			<div id="share">SHARE</div>
+		</article>
+		<article>
+			<strong>Protection of Education in Insecurity and Armed Conflict</strong><br>
+			<span>February, 2014</span><br>
+			<br>61 million children around the world are not in school, many of them from Arab countries.<br>
+			<img src="img/img5.jpg">
+			<div id="share">SHARE</div>
+		</article>
+	</div>
 	<script type="text/javascript">
 		$('#bars, .fa-angle-left').click(function(){
-			$('table .fa-angle-left').hide();
 			$('.page').hide();
 			$('.inner').hide();
+			$('.fa-angle-left').hide();
 			$('#news').removeClass("selected");
 			$('.mobile-navigation').fadeIn();
 			$('.upper').fadeIn();
 		})
+		$('a .fa-home').click(function(){
+			$('.mobile-navigation').fadeOut();
+			$('.page').hide();
+			$('.inner').hide();
+			$('.fa-angle-left').hide();
+			$('#news').removeClass("selected");
+			$('.home-page').delay(1000).fadeIn();
+		})
 		$('#news').click(function(){
 			$('#news').addClass("selected");
-			$('table .fa-angle-left').fadeIn();
+			$('.fa-angle-left').fadeIn();
 			$('.upper').fadeOut();
 			$('.inner').delay(1000).fadeIn();
 		})
 		$('#contact').click(function(){
 			$('.mobile-navigation').fadeOut();
 			$('.contact-page').delay(1000).fadeIn();
+		})
+		$('#gallery').click(function(){
+			$('.mobile-navigation').fadeOut();
+			$('.gallery-page').delay(1000).fadeIn();
 		})
 	</script>
 </body>
