--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
 	<script type="text/javascript">
 		$(document).ready(function () {
-			popitup('samakanbour.github.io/hho/home');
+			popitup('home');
 		})
 		function popitup(url) {
-			newwindow=window.open(url,'name','height=700,width=500');
+			newwindow=window.open(url,'name','height=650,width=400');
 			if (window.focus) {newwindow.focus()}
 			return false;
 		}
