--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<h3>If you are on a Desktop platform, a pop-up of the mobile site will appear.</h3><br>
+	<h3>If you are on a Desktop platform, a pop-up of the mobile site will appear.</h3>
 	<h3>If you are on a Mobile platform, please click <a href="home" style="color: blue;">here</a>.</h3>
 	<script type="text/javascript">
 		$(document).ready(function () {
